# python-ds

./: .gitignore  README.md  assignment2.py  assignment3.py  assignment4.py  pyproject.toml  week1.py  week2.py  week3.py
DS-fundations-2/data-wrangling/: 01_data-wralling_intro.ipynb  02_1_gathering-data.ipynb  02_2_cleaning_sequences.ipynb  02_3_cleaning-student.ipynb  02_gathering-data.ipynb  README.md  dataset.csv
MLmastering/: ML_mastery_with_python.ipynb  linear_algebra_for_ML.ipynb
codebasics/: README.md  class-code-2.ipynb
corey-tutorials/requests/: rdemo.py  (+3 more)
data_analysis_with_pandas_and_python/: Some.ipynb  module_date_and_times_129-.ipynb  module_date_and_times_129-146.ipynb  module_df1_44-58.ipynb  module_df2_59-68.ipynb  module_df3_69-.ipynb  module_df3_69-85.ipynb  module_groupby_110-116.ipynb  module_input_output_157-.ipynb  module_input_output_157-163.ipynb  module_merge_joining_conc_117-.ipynb  module_merge_joining_conc_117-128.ipynb  module_multiindex_95-.ipynb  module_multiindex_95-109.ipynb  module_options_and_settings_170-.ipynb  module_panels_147-.ipynb  module_panels_147-156.ipynb  module_series_24-43.ipynb  module_text_data_86-.ipynb  module_text_data_86-94.ipynb  module_visualization_164-169.ipynb
introduction-to-data-science-in-python/: assignment3.py
math_4_ml/: week3_calculos_nn.ipynb
py-mysql/: freecodecamp_tutorial.ipynb  thecodex_tutorial.ipynb
python-base/: .gitignore  README.md  escola_v1_com_listas.py  escola_v2_com_sets.py  hello.py  infixcalc.py  main.py  micro_errors.py  notes.py
sentdex/: nnfs.ipynb
week1/: week1.py
(+94 files in other folders)
