[tool.poetry]
name = "python-ds"
version = "0.1.0"
description = "Python data science studies"
authors = ["George Carvalho <geocarvalho91@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
